add updatePatient functionality